--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,9 @@
 name = "pfsense-api-client"
 version = "0.1.0"
 description = "A client for the unofficial pfSense API https://github.com/jaredhendrickson13/pfsense-api"
-authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
+authors = [
+    "James Hodgkinson <james@terminaloutcomes.com>",
+]
 license = "MIT"
 
 [tool.poetry.dependencies]
@@ -20,5 +22,16 @@ types-requests = "^2.27.7"
 pylint-pydantic = "^0.1.4"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = [
+    "poetry-core>=1.0.0",
+]
 build-backend = "poetry.core.masonry.api"
+
+[project]
+name = "pfsense-api-client"
+description = "A client for the unofficial pfSense API https://github.com/jaredhendrickson13/pfsense-api"
+license = "MIT"
+version = "0.1.0"
+authors = [
+    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
+]
