--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ mypy = "^0.931"
 black = "^21.12b0"
 types-requests = "^2.27.7"
 pylint-pydantic = "^0.1.4"
+mkdocstrings = "^0.17.0"
+mkdocs-material = "^8.1.8"
+mkdocs = "^1.2.3"
 
 [build-system]
 requires = [
