such black lint, many test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pylint-pydantic = "^0.1.4"
 mkdocstrings = "^0.17.0"
 mkdocs-material = "^8.1.8"
 mkdocs = "^1.2.3"
+loguru = "^0.5.3"
 
 [build-system]
 requires = [
