--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ mkdocstrings = "^0.17.0"
 mkdocs-material = "^8.1.8"
 mkdocs = "^1.2.3"
 loguru = "^0.5.3"
+pylint-pytest = "^1.1.2"
 
 [build-system]
 requires = [
@@ -51,3 +52,10 @@ version = "0.1.0"
 authors = [
     { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
 ]
+
+[tool.pylint.MASTER]
+disable="W0511,R0801"
+# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
+extension-pkg-whitelist="pydantic"
+max-line-length=200
+load-plugins="pylint_pydantic,pylint_pytest"
