--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ mkdocs-material = "^8.1.8"
 mkdocs = "^1.2.3"
 loguru = "^0.5.3"
 pylint-pytest = "^1.1.2"
+click = "^8.1.2"
+questionary = "^1.10.0"
 
 [build-system]
 requires = [
@@ -48,7 +50,7 @@ build-backend = "poetry.core.masonry.api"
 name = "pfsense-api-client"
 description = "A client for the unofficial pfSense API https://github.com/jaredhendrickson13/pfsense-api"
 license = "MIT"
-version = "0.1.0"
+version = "0.0.1"
 authors = [
     { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
 ]
