--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - name: Running pytest
+      - name: Not actually running pytest
         run: |
           python --version
           python -m pip install --quiet --no-cache-dir --upgrade poetry
           poetry install
-          poetry run python -m pytest
+          #poetry run python -m pytest
