--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ click = "^8.1.2"
 questionary = "^1.10.0"
 mkdocstrings-python = "^0.8.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+
 [build-system]
 requires = [
     "poetry-core>=1.0.0",
@@ -62,3 +65,6 @@ disable="W0511,R0801"
 extension-pkg-whitelist="pydantic"
 max-line-length=200
 load-plugins="pylint_pydantic,pylint_pytest"
+
+[tool.pytest]
+ignore="site/"
