Fix Docker build process.

--- a/docker/local/Dockerfile
+++ b/docker/local/Dockerfile
@@ -11,4 +11,6 @@ COPY ./requirements /requirements
 RUN pip install --upgrade pip
 
 # Don't cache installers to reduce image size
-RUN pip install --no-cache-dir -r /requirements/requirements.txt
+RUN pip install --no-cache-dir -r /requirements/requirements_dev.txt
+
+WORKDIR /app
