Separate out unit tests from integration tests.

--- a/local.yml
+++ b/local.yml
@@ -9,6 +9,6 @@ services:
       - ./pfsense_api_client:/app/pfsense_api_client
       - ./tests:/app/tests
       - ./pfsense-api.json:/root/.config/pfsense-api.json
-    command: pytest tests/
+    command: pytest tests/unit/
     stdin_open: true
     tty: true
