--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ keywords = [
 classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
+dependencies = [
+    "requests",
+    "pydantic>=2.6"
+]
 
 [project.urls]
 homepage = "https://github.com/yaleman/pfsense-api-client/"
@@ -34,26 +38,3 @@ packages = ["src/pyfsense_client"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/pyfsense_client"]
-
-[tool.poetry.dependencies]
-python = "^3.8"
-requests = "^2.28.1"
-click = "^8.0.3"
-pydantic = "^1.10.2"
-
-[tool.poetry.dev-dependencies]
-pylint = "^2.15.5"
-pytest = "^7.2.0"
-mypy = "^1.0"
-black = "^23.1"
-types-requests = "^2.28.11"
-pylint-pydantic = "^0.1.4"
-mkdocstrings = "^0.20.0"
-mkdocs-material = "^9.0.2"
-mkdocs = "^1.4.2"
-loguru = "^0.6.0"
-pylint-pytest = "^1.1.2"
-click = "^8.1.2"
-questionary = "^1.10.0"
-mkdocstrings-python = "^0.8.0"
-
