--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - sync
   - test
   - build
 
@@ -68,3 +69,23 @@ build_and_publish:
     - pip install hatch
     - hatch build
     - hatch publish --repo $PYPI_REPO_URL --user $PYPI_REPO_USER --auth $PYPI_REPO_AUTH
+
+
+# Push a public copy of this repo up to GitHub
+sync_public_repo:
+  stage: sync
+  image: alpine:latest
+  before_script:
+    - apk add --no-cache git openssh-client bash git-filter-repo
+    - eval $(ssh-agent -s)
+    - echo "$GITHUB_SSH_PUSH_KEY" | tr -d '\r' | ssh-add -
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - ssh-keyscan github.com >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
+    - git config --global user.email "devinbarry@users.noreply.github.com"
+    - git config --global user.name "Devin Barry"
+  script:
+    - bash ./scripts/sync_public_repo.sh
+  only:
+    - master
