--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,7 +76,9 @@ sync_public_repo:
   stage: sync
   image: alpine:latest
   before_script:
-    - apk add --no-cache git openssh-client bash git-filter-repo
+    - apk add --no-cache git openssh-client bash
+    - wget https://github.com/newren/git-filter-repo/raw/main/git-filter-repo -O /usr/local/bin/git-filter-repo
+    - chmod +x /usr/local/bin/git-filter-repo
     - eval $(ssh-agent -s)
     - echo "$GITHUB_SSH_PUSH_KEY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
