--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,11 +6,11 @@ updates:
     interval: weekly
     day: saturday
     time: "02:00"
-    timezone: "Australia/Brisbane"
+    timezone: "Europe/London"
 - package-ecosystem: github-actions
   directory: /
   schedule:
     interval: weekly
     day: saturday
     time: "02:00"
-    timezone: "Australia/Brisbane"
+    timezone: "Europe/London"
