--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,3 +91,6 @@ sync_public_repo:
     - bash ./scripts/sync_public_repo.sh
   only:
     - master
+  when: manual
+  variables:
+    FORCE_SYNC: ${FORCE_SYNC:-"false"}
