Add scripts that help with removing sensitive data from the repo. Only run gitlab stages for master branch.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,7 @@ test_pyfsense_client:
   tags:
     - python
   only:
-    - branches
-    - tags
+    - master
   before_script:
     - python --version
     - pip --version
