--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -13,13 +13,19 @@ jobs:
       - uses: actions/checkout@v4.1.7
         with:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-      - name: Set up Python 3.9
+
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
-      - name: Running mypy
+          python-version: '3.11'
+
+      - name: Install dependencies
         run: |
           python --version
-          python -m pip install --quiet --no-cache-dir --upgrade poetry
-          poetry install
-          poetry run mypy $(basename $(pwd) | sed -E 's/-/_/g') tests/
+          python -m pip install --upgrade pip
+          python -m pip install --quiet --no-cache-dir -r requirements/requirements_dev.txt
+           python -m pip install mypy  # Ensure pylint is installed
+
+      - name: Running mypy
+        run: |
+          python -m mypy $(basename $(pwd) | sed -E 's/-/_/g') tests/
