--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,13 +13,20 @@ jobs:
       - uses: actions/checkout@v4.1.7
         with:
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-      - name: Set up Python 3.9
+
+      - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
-      - name: Running tests
+          python-version: '3.11'
+
+      - name: Install dependencies
         run: |
-            python -m pip install --quiet --no-cache-dir --upgrade poetry
-            poetry install
-            poetry run pylint $(basename $(pwd) | sed -E 's/-/_/g')
-            poetry run pylint tests/
+          python --version
+          python -m pip install --upgrade pip
+          python -m pip install --quiet --no-cache-dir -r requirements/requirements_dev.txt
+          python -m pip install pylint  # Ensure pylint is installed
+
+      - name: Running pylint
+        run: |
+          python -m pylint $(basename $(pwd) | sed -E 's/-/_/g')
+          python -m pylint tests/
