--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,11 @@
 stages:
-  # - sync
+  - sync
   - test
   - build
 
 test_pyfsense_client:
   stage: test
-  image: python:3.11
+  image: python:3.12
   tags:
     - python
   only:
@@ -22,9 +22,8 @@ test_pyfsense_client:
     # Run all tests
     - pytest tests/unit/
 
-
 build_and_publish:
-  image: python:3.11
+  image: python:3.12
   stage: build
   tags:
     - python
@@ -37,7 +36,7 @@ build_and_publish:
   before_script:
     - apt-get update && apt-get install -y jq
     # Get the project version from PyPI
-    - export PYPI_PROJECT_VERSION=$(curl $UNOBTAIN_INDEX_URL/pyfsense-client/json | jq -r '.info.version')
+    - export PYPI_PROJECT_VERSION=$(curl "$UNOBTAIN_INDEX_URL/pyfsense-client/json" | jq -r '.info.version')
     - echo "PyPI project version - $PYPI_PROJECT_VERSION"
     # Get the project version from the project source code
     - export PROJECT_VERSION=$(grep "__version__" src/pyfsense_client/__init__.py | awk -F "[\"']" '{print $2}')
@@ -61,19 +60,30 @@ build_and_publish:
       if [[ -n "$CI_COMMIT_TAG" ]]; then
         echo "Building on tag - $CI_COMMIT_TAG"
         # Check that the project version matches the commit tag
-        if [ "$CI_COMMIT_TAG" != "v$PROJECT_VERSION" ]; then exit 1; fi
+        if [ "$CI_COMMIT_TAG" != "v$PROJECT_VERSION" ]; then
+          echo "Tag ($CI_COMMIT_TAG) does not match project version (v$PROJECT_VERSION)"
+          exit 1
+        fi
       else
         echo "Building on branch - $CI_COMMIT_REF_NAME"
       fi
     - pip install hatch
     - hatch build
-    - hatch publish --repo $PYPI_REPO_URL --user $PYPI_REPO_USER --auth $PYPI_REPO_AUTH
+    - hatch publish --repo "$PYPI_REPO_URL" --user "$PYPI_REPO_USER" --auth "$PYPI_REPO_AUTH"
 
 
 # Push a public copy of this repo up to GitHub
 sync_public_repo:
   stage: sync
   image: python:3.12-alpine
+  # Use `rules` to skip when SKIP_SYNC is "true"
+  # Otherwise, run only on master
+  rules:
+    - if: '$SKIP_SYNC == "true"'
+      when: never
+    - if: '$CI_COMMIT_BRANCH == "master"'
+      when: on_success
+    - when: never
   before_script:
     - apk add --no-cache git openssh-client bash
     - wget https://github.com/newren/git-filter-repo/raw/main/git-filter-repo -O /usr/local/bin/git-filter-repo
@@ -88,7 +98,5 @@ sync_public_repo:
     - git config --global user.name "Devin Barry"
   script:
     - bash ./scripts/sync_public_repo.sh
-  only:
-    - master
   variables:
     FORCE_SYNC: ${FORCE_SYNC:-"false"}
