--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,21 @@ keywords = [
     "API",
 ]
 classifiers = [
-    "Topic :: Software Development :: Libraries :: Python Modules"
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
     "requests",
     "pydantic>=2.10"
 ]
+
+[project.optional-dependencies]
+dev = ["pytest", "python-dotenv"]
 
 [project.urls]
 homepage = "https://github.com/devinbarry/pyfsense-client"
