Add a build stage for publishing to production pypi.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - sync
   - test
   - build
+  - publish_prod
 
 test_pyfsense_client:
   stage: test
@@ -84,6 +85,21 @@ publish_to_test_pypi:
     - pip install hatch twine
     - hatch build
     - twine upload --non-interactive -r testpypi dist/*
+
+
+publish_to_prod_pypi:
+  stage: publish_prod
+  image: python:3.12
+  needs:
+    - publish_to_test_pypi
+  rules:
+    - if: '$CI_COMMIT_TAG'  # Only run this job on tag builds
+  script:
+    - export TWINE_USERNAME="__token__"
+    - export TWINE_PASSWORD="$PYPI_PROD_API_TOKEN"
+    - pip install hatch twine
+    - hatch build
+    - twine upload --non-interactive -r pypi dist/*
 
 
 # Push a public copy of this repo up to GitHub
