--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,7 +77,7 @@ publish_to_test_pypi:
   stage: build
   image: python:3.12
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_REF_NAME == "master" || $CI_COMMIT_TAG'
       when: on_success
   script:
     - export TWINE_USERNAME="__token__"
