--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ homepage = "https://github.com/devinbarry/pyfsense-client"
 repository = "https://github.com/devinbarry/pyfsense-client"
 documentation = "https://yaleman.github.io/pfsense-api-client/"
 
+[tool.ruff]
+line-length = 120
+
 [tool.hatch.version]
 path = "src/pyfsense_client/__init__.py"
 
